k8s/1.17.2/salt/flagger/resources/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: podinfo-gateway
  namespace: test
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "podinfo.vagrant.local"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: podinfo
  namespace: test
spec:
  hosts:
  - "podinfo.vagrant.local"
  gateways:
  - podinfo-gateway
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: podinfo
        port:
          number: 9898
